--- a/dbm.html
+++ b/dbm.html
@@ -33,7 +33,7 @@
 			</div>
 
 			<div>
-				<a class="title title2" href="https://www.qiuqiujiejie.com/dbmsm.html" target="_blank">DBM语音包 食用方法</a>
+				<a class="title title2" href="dbmsm.html" target="_blank">DBM语音包 食用方法</a>
 			<!--	<div class="des">优：有立体声效果</br>劣：不知道</div> -->
 			</div>
 
