--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@ var _hmt = _hmt || [];
 <script src="jquery.min.js"></script>
 <script type="text/javascript">
 	//上面3个按钮链接
-	let btnLink = ["https://www.qiuqiujiejie.com/about.html", "http://down.qiuqiujiejie.com/QiuDBM20181103.zip?attname=", "https://www.qiuqiujiejie.com/pvpsm.html"];
+	let btnLink = ["about.html", "http://down.qiuqiujiejie.com/QiuDBM20181103.zip?attname=", "pvpsm.html"];
 	//下面3个黄色文字 链接
-	let pLink = ["https://www.qiuqiujiejie.com/dbm.html", "https://www.qiuqiujiejie.com/dbmsm.html", "https://www.qiuqiujiejie.com/pvpsm.html"];
+	let pLink = ["dbm.html", "dbmsm.html", "pvpsm.html"];
 
 	// 初始化 "container" 高度居中
 	$("#container").css({
