--- a/dbm.html
+++ b/dbm.html
@@ -28,7 +28,7 @@
 	<div id="container">
 		<div class="program">
 			<div>
-				<a class="title" href="http://down.qiuqiujiejie.com/QiuDBM20181103.zip?attname=" target="_blank">球儿DBM语音包 下载</a>
+				<a class="title" href="QiuDBM20181103.zip" target="_blank">球儿DBM语音包 下载</a>
 			<!--	<div class="des">优：不知道</br>劣：无立体声效果</div> -->
 			</div>
 
@@ -63,15 +63,16 @@
 
 
 			<div style="display:none;">
-	<script>
+<script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?3c145bafb9f43b078fbcc6a42780bb36";
+  hm.src = "https://hm.baidu.com/hm.js?43b750aadf9402c58b6faf34804ea064";
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
+
 </div> 
 
 
