--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 		<video autoplay loop muted>
 			
-			<source src="http://down.qiuqiujiejie.com/video.mp4" type="video/mp4">
-			<!-- <source src="http://down.qiuqiujiejie.com/hellsing.mp4" type="video/mp4"> -->
+			<source src="static/video.mp4" type="video/mp4">
+
 		</video>
 		<audio src="static/audio1.mp3" loop id="audio1"></audio>
 		<audio src="static/audio2.mp3" loop id="audio2"></audio>
@@ -77,16 +77,19 @@
 		</div>
 	</body>
 
+
 <div style="display:none;">
-	<script>
+
+<script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?3c145bafb9f43b078fbcc6a42780bb36";
+  hm.src = "https://hm.baidu.com/hm.js?43b750aadf9402c58b6faf34804ea064";
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
+
 </div> 
 
 
@@ -94,7 +97,7 @@ var _hmt = _hmt || [];
 <script src="jquery.min.js"></script>
 <script type="text/javascript">
 	//上面3个按钮链接
-	let btnLink = ["about.html", "http://down.qiuqiujiejie.com/QiuDBM20181103.zip?attname=", "pvpsm.html"];
+	let btnLink = ["about.html", "QiuDBM20181103.zip", "pvpsm.html"];
 	//下面3个黄色文字 链接
 	let pLink = ["dbm.html", "dbmsm.html", "pvpsm.html"];
 
