--- a/dbmsm.html
+++ b/dbmsm.html
@@ -33,31 +33,31 @@
 </section>
 <section class="_135editor" data-role="paragraph" style="border: 0px none;">
     <p>
-        <br/><div align="center"><img src="http://down.qiuqiujiejie.com/dbmsm07.jpg" width="240"></div><br/><br/>
+        <br/><div align="center"><img src="static/dbmsm07.jpg" width="240"></div><br/><br/>
     </p>
     <p style="line-height: 2em; margin-left: 10px; margin-right: 10px;">
         <span style="font-size: 24px;font-weight:bold;">球儿的DBM语音包 食用方法：<br/><br/></span>
     </p>
     <p style="line-height: 2em; margin-left: 10px; margin-right: 10px;">
         <span style="font-size: 16px;font-weight:bold;">1. 下载语音包，解压后，将[<span style="color: #ff0000; font-size: 16px;">DBM-VPQiu</span>]文件夹，复制到游戏客户端的<span style="color: #ff0000; font-size: 16px;">/Interface/AddOns</span>中即可，如下图所示：</span><span style="color: #a5a5a5;">（<span style="text-decoration: line-through;">不知道魔兽文件在哪？请在你的桌面wow的图标上，鼠标右键，选择“属性”，然后在弹出的对话框中，选择“打开文件位置”，就进入了wow的文件目录啦！</span>）
-        <br/><img src="http://down.qiuqiujiejie.com/dbmsm03.png"></span>
+        <br/><img src="static/dbmsm03.png"></span>
     </p>
     <p style="line-height: 2em; margin-left: 10px; margin-right: 10px;">
         <span style="font-size: 16px;font-weight:bold;">2. 进入游戏，在对话框中输入“<span style="color: #ff0000; font-size: 16px;">/dbm</span>”，调出DBM设置界面，点击“<span style="color: #ff0000; font-size: 16px;">选项</span>-<span style="color: #ff0000; font-size: 16px;">语音警告</span>”，然后按照下图设置即可：<span style="color: #e36c09; font-size: 16px;">
-        	<br/><img src="http://down.qiuqiujiejie.com/dbmsm02.jpg" width="660">   </span></span>
+        	<br/><img src="static/dbmsm02.jpg" width="660">   </span></span>
     </p>
     <p>
         <br/>
-    </p><div align="center"><img src="http://down.qiuqiujiejie.com/dbmsm09.gif" width="150"></div>
+    </p><div align="center"><img src="static/dbmsm09.gif" width="150"></div>
         <p>
         <br/>
     </p>
     <p style="line-height: 2em; margin-left: 10px; margin-right: 10px;">
         <span style="font-size: 16px;">关于DBM音量大小的设置，可以按照下面的方法进行尝试<br/>
         	在游戏对话框中输入“<span style="color: #ff0000; font-size: 16px;">/dbm</span>”，调出DBM设置界面，然后按照下图设置即可：<span style="color: #e36c09; font-size: 16px;">
-        	<br/><img src="http://down.qiuqiujiejie.com/dbmsm04.jpg" width="660">   </span>
+        	<br/><img src="static/dbmsm04.jpg" width="660">   </span>
         	<br/>然后，键盘左上角Esc，调出系统设置界面，参考下图的设置，就可以通过调节”对话音量“，来调整DBM的音量大小了
-        	<br/><img src="http://down.qiuqiujiejie.com/dbmsm05.jpg" width="660"> 
+        	<br/><img src="hstatic/dbmsm05.jpg" width="660"> 
         </span>
     </p>
 
@@ -66,7 +66,7 @@
     <p>
         <br/>
     </p>  
-    <div align="center"><img src="http://down.qiuqiujiejie.com/dbmsm11.jpg" width="180"></div>  
+    <div align="center"><img src="static/dbmsm11.jpg" width="180"></div>  
     <p>
         <br/>
     </p>
@@ -100,7 +100,7 @@
     <p>
         <br/>
     </p>
-    <div align="center"><img src="http://down.qiuqiujiejie.com/dbmsm14.jpg" width="180"></div> 
+    <div align="center"><img src="static/dbmsm14.jpg" width="180"></div> 
     <p>
         <br/>
     </p>
@@ -155,16 +155,18 @@
 
 		</div>
 
-		<div style="display:none;">
-	<script>
+<div style="display:none;">
+
+<script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?3c145bafb9f43b078fbcc6a42780bb36";
+  hm.src = "https://hm.baidu.com/hm.js?43b750aadf9402c58b6faf34804ea064";
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
+
 </div> 
 
 
