--- a/dbmsm.html
+++ b/dbmsm.html
@@ -57,7 +57,7 @@
         	在游戏对话框中输入“<span style="color: #ff0000; font-size: 16px;">/dbm</span>”，调出DBM设置界面，然后按照下图设置即可：<span style="color: #e36c09; font-size: 16px;">
         	<br/><img src="static/dbmsm04.jpg" width="660">   </span>
         	<br/>然后，键盘左上角Esc，调出系统设置界面，参考下图的设置，就可以通过调节”对话音量“，来调整DBM的音量大小了
-        	<br/><img src="hstatic/dbmsm05.jpg" width="660"> 
+        	<br/><img src="static/dbmsm05.jpg" width="660"> 
         </span>
     </p>
 
