--- a/dbm.html
+++ b/dbm.html
@@ -28,7 +28,7 @@
 	<div id="container">
 		<div class="program">
 			<div>
-				<a class="title" href="QiuDBM20181103.zip" target="_blank">球儿DBM语音包 下载</a>
+				<a class="title" href="http://down.qiuqiujiejie.com/QiuDBM20181103.zip?attname=" target="_blank">球儿DBM语音包 下载</a>
 			<!--	<div class="des">优：不知道</br>劣：无立体声效果</div> -->
 			</div>
 
