--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<video autoplay loop muted>
 			
-			<source src="static/video.mp4" type="video/mp4">
+			<source src="http://down.qiuqiujiejie.com/video.mp4" type="video/mp4">
 
 		</video>
 		<audio src="static/audio1.mp3" loop id="audio1"></audio>
@@ -97,7 +97,7 @@ var _hmt = _hmt || [];
 <script src="jquery.min.js"></script>
 <script type="text/javascript">
 	//上面3个按钮链接
-	let btnLink = ["about.html", "QiuDBM20181103.zip", "pvpsm.html"];
+	let btnLink = ["about.html", "http://down.qiuqiujiejie.com/QiuDBM20181103.zip?attname=", "pvpsm.html"];
 	//下面3个黄色文字 链接
 	let pLink = ["dbm.html", "dbmsm.html", "pvpsm.html"];
 
