--- a/dbm.html
+++ b/dbm.html
@@ -28,7 +28,7 @@
 	<div id="container">
 		<div class="program">
 			<div>
-				<a class="title" href="http://down.qiuqiujiejie.com/QiuDBM20191007.zip?attname=" target="_blank">球儿DBM语音包 下载</a>
+				<a class="title" href="http://dbm.xiaokoudai.net/DBM-VPQiu%202020_3_4.zip?attname=" target="_blank">球儿DBM语音包 下载</a>
 			<!--	<div class="des">优：不知道</br>劣：无立体声效果</div> -->
 			</div>
 
@@ -39,6 +39,15 @@
 
 		</div>
 		<div class="verison">
+			<div class="versionItem">
+				<div class="versionTitle">
+					<div>v 1.0.2 现已支持8.3版本</div>
+					<div class="time">2020-03-04</div>
+				</div>
+				<div class="versionCont">
+					<div>8.2AFK了...断更了一个版本，现已重新更新至8.3版本</div>
+				</div>
+			</div>
 			<div class="versionItem">
 				<div class="versionTitle">
 					<div>v 1.0.1 追加缺失文件</div>
